rust/error.txt
   Compiling devkit-cli v0.1.0 (D:\Xpotato-apps\xpotato-devkit\rust\crates\devkit-cli)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde_json`
   --> crates\devkit-cli\src\main.rs:483:48
    |
483 | ...                   println!("{}", serde_json::to_string_pretty(&summary).unwrap());
    |                                      ^^^^^^^^^^ use of unresolved module or unlinked crate `serde_json`
    |
    = help: if you wanted to use a crate named `serde_json`, use `cargo add serde_json` to add it to your `Cargo.toml`

error[E0609]: no field `git` on type `DevkitConfig`
   --> crates\devkit-cli\src\main.rs:521:72
    |
521 |                     let lang_to_use = lang.as_deref().unwrap_or(config.git.lang.as_str());
    |                                                                        ^^^ unknown field
    |
    = note: available field is: `encoding`

error[E0609]: no field `git` on type `DevkitConfig`
   --> crates\devkit-cli\src\main.rs:535:72
    |
535 |                     let lang_to_use = lang.as_deref().unwrap_or(config.git.lang.as_str());
    |                                                                        ^^^ unknown field
    |
    = note: available field is: `encoding`

error[E0609]: no field `git` on type `DevkitConfig`
   --> crates\devkit-cli\src\main.rs:556:72
    |
556 |                     let lang_to_use = lang.as_deref().unwrap_or(config.git.lang.as_str());
    |                                                                        ^^^ unknown field
    |
    = note: available field is: `encoding`

error[E0609]: no field `git` on type `DevkitConfig`
   --> crates\devkit-cli\src\main.rs:576:72
    |
576 |                     let lang_to_use = lang.as_deref().unwrap_or(config.git.lang.as_str());
    |                                                                        ^^^ unknown field
    |
    = note: available field is: `encoding`

Some errors have detailed explanations: E0433, E0609.
For more information about an error, try `rustc --explain E0433`.
error: could not compile `devkit-cli` (bin "devkit-cli") due to 5 previous errors
